# arxiv-messaging

./: README.md  foo
arxiv_messaging/: README.md  __init__.py  event_type.py  firebase_loader.py  manage_subscribers.py  pyproject.toml  send_test_message.py  subscribers.yaml
arxiv_messaging/arxiv_messaging/: send_notification.py
messaging-service/: .gitignore  Dockerfile  Makefile  README.md  README_DEPLOYMENT.md  SPEC.md  api_client_example.py  auth-proxy.py  build-docker.sh  deploy-service.sh  deploy.sh  deploy.yaml  firebase-commands.md  main.py  pyproject.toml  pytest.ini  setup-firebase.sh  setup-messaging-service.sh  start-proxy.sh  test_logging.py
messaging-service/client/: README.md  __init__.py  firebase_loader.py  manage_subscribers.py  send_notification.py  send_test_message.py
messaging-service/src/: api.py  email_sender.py  message_server.py
messaging-service/tests/: __init__.py  conftest.py  test_email_delivery.py  test_event_aggregation.py  test_user_preferences.py
tests/: conftest.py  flush_messages.py  send_test_message.py  test_user_preferences.py
