[tool.poetry]
name = "arxiv-messaging"
version = "0.1.0"
description = "ArXiv messaging library for event types and messaging utilities"
authors = ["ArXiv Team <developers@arxiv.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
google-cloud-pubsub = "*"
google-auth = "*"
requests = "*"
firebase-admin = "*"
ruamel-yaml = "*"
structlog = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
isort = "*"
flake8 = "*"
mypy = "*"

[tool.poetry.scripts]
arxiv-manage-subscribers = "arxiv_messaging.manage_subscribers:main"
arxiv-send-test-message = "arxiv_messaging.send_test_message:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"